--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
 
     /* font-family: "PT Serif", Times, "Times New Roman", Georgia, serif; */
-  font-family: "Merienda", serif;
+  font-family: Poppins, sans-serif;
 
 
     background-color: #fff;
@@ -100,7 +100,7 @@ body {
 .hero-content ul {
     display: flex;
     flex-direction: column;
-    
+
     list-style-type: disc;
     margin: 0 auto;
     padding-left: 20px;
@@ -622,7 +622,7 @@ display: block;
 }
 
 
-.footer {
+/* .footer {
     text-align: center;
     padding: 20px;
     background-color: #000;
@@ -631,8 +631,58 @@ display: block;
 
 .footer p {
     font-size: 0.9rem;
-}
+} */
 
+
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 40px 0;
+}
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+}
+.footer-logo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+.footer-logo img {
+    height: 40px;
+    margin-right: 10px;
+}
+.social-icons a {
+    font-size: 18px;
+    margin-right: 15px;
+    display: inline-block;
+}
+.social-icons a i {
+    color: #fff;
+}
+.footer-section h5 {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+.footer-section ul li {
+    margin-bottom: 10px;
+}
+.footer-section ul li a {
+    font-size: 14px;
+}
+.footer-bottom {
+    border-top: 1px solid #333;
+    padding-top: 10px;
+    font-size: 14px;
+    text-align: center;
+}
 
 
 .contact-section {
