--- a/style.css
+++ b/style.css
@@ -660,55 +660,6 @@ line-height: 1.5;
 }
 
 
-footer {
-    background-color: #000;
-    color: #fff;
-    padding: 40px 0;
-}
-footer a {
-    color: #fff;
-    text-decoration: none;
-}
-footer a:hover {
-    text-decoration: underline;
-}
-.footer-logo {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-.footer-logo img {
-    height: 40px;
-    margin-right: 10px;
-}
-.social-icons a {
-    font-size: 18px;
-    margin-right: 15px;
-    display: inline-block;
-}
-.social-icons a i {
-    color: #fff;
-}
-.footer-section h5 {
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-.footer-section ul {
-    list-style: none;
-    padding: 0;
-}
-.footer-section ul li {
-    margin-bottom: 10px;
-}
-.footer-section ul li a {
-    font-size: 14px;
-}
-.footer-bottom {
-    border-top: 1px solid #333;
-    padding-top: 10px;
-    font-size: 14px;
-    text-align: center;
-}
 
 
 
@@ -932,22 +883,25 @@ footer a:hover {
     min-width: 300px;
 }
 
-.intro h1 {
-    font-size: 2rem;
+.intro h6 {
+    font-size: 1rem;
     margin-bottom: 10px;
     text-transform: uppercase;
     color: #333;
+    font-weight: bolder;
 }
 
-.intro p {
+.intro h3 {
     margin-bottom: 20px;
-    font-size: 1rem;
-    line-height: 1.5;
+    font-size: 2.2rem;
+    line-height: 1.3;
+    font-weight: bold;
 }
 
-.intro .name {
-    font-weight: bold;
+.intro .h6 {
+    font-weight: bolder;
     margin-top: 20px;
+    font-size: 2rem;
 }
 
 .form-container {
