--- a/style.css
+++ b/style.css
@@ -660,56 +660,6 @@ line-height: 1.5;
 }
 
 
-footer {
-    background-color: #000;
-    color: #fff;
-    padding: 40px 0;
-}
-footer a {
-    color: #fff;
-    text-decoration: none;
-}
-footer a:hover {
-    text-decoration: underline;
-}
-.footer-logo {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-.footer-logo img {
-    height: 40px;
-    margin-right: 10px;
-}
-.social-icons a {
-    font-size: 18px;
-    margin-right: 15px;
-    display: inline-block;
-}
-.social-icons a i {
-    color: #fff;
-}
-.footer-section h5 {
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-.footer-section ul {
-    list-style: none;
-    padding: 0;
-}
-.footer-section ul li {
-    margin-bottom: 10px;
-}
-.footer-section ul li a {
-    font-size: 14px;
-}
-.footer-bottom {
-    border-top: 1px solid #333;
-    padding-top: 10px;
-    font-size: 14px;
-    text-align: center;
-}
-
 
 
 .info-box {
@@ -999,4 +949,61 @@ footer a:hover {
     }
 }
 
-</style><script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 40px 0;
+}
+footer h5 {
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+footer ul {
+    list-style: none;
+    padding: 0;
+}
+footer ul li {
+    margin-bottom: 10px;
+}
+footer ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+footer ul li a:hover {
+    text-decoration: underline;
+}
+.footer-logo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+.social-icons {
+    margin-top: 15px;
+}
+.social-icons a {
+    color: #fff;
+    font-size: 20px;
+    margin-right: 15px;
+    text-decoration: none;
+}
+.footer-bottom {
+    border-top: 1px solid #333;
+    padding-top: 20px;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 14px;
+}
+@media (max-width: 768px) {
+    .footer-logo {
+        text-align: center;
+    }
+    .social-icons {
+        text-align: center;
+    }
+    .row > div {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+}
