--- a/style.css
+++ b/style.css
@@ -964,7 +964,7 @@ line-height: 1.5;
 .intro h3 {
     font-size: 1.9rem;
     line-height: 1.6;
-    font-weight: bold;
+    font-weight: 600 ;
     margin-bottom: 20px;
 }
 
